--- a/index.html
+++ b/index.html
@@ -1,13 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" src="/assets/css/style.css"/>
+    <link rel="stylesheet" src="/assets/css/style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <title>Weather Dashboard</title>
 </head>
+
 <body>
+    <!--HEADER-->
+    <header>
+        <div class="container-fluid"></div>
+        <div class="row text-center">
+            <h1>Weather Dashboard</h1>
+        </div>
+        </div>
+    </header>
+
+    <!--MAIN CONTENT-->
+    <main>
+        <div class="container-fluid text-center">
+            <!--FIRST ROW-->
+            <div class="row">
+                <!--SEARCH CITY-->
+                <div class="col">
+                    <div class="input-group-sm mb-3">
+                        <span class="input-group-text" id="inputGroup-sizing-sm">Search city here:</span>
+                        <textarea class="form-control" type="text" aria-label="With textarea"
+                            aria-describedby="inputGroup-sizing-sm" placeholder="Boston..."></textarea>
+                    </div>
+                    <button type="button" class="btn btn-primary btn-sm search">Search</button>
+                </div>
+                <!--DISPLAY CITY AND TODAY'S DATE-->
+                <div class="col displaycity">
+                    <h2>city/date place holder</h2>
+                    <!--Bootstrap List Group
+                    <li class="list-group-item">An item</li>-->
+                </div>
+            </div>
+            <!--SECOND ROW-->
+            <div class="row">
+                <!--LIST OF SEARCHED CITY(S)-->
+                <div class="col savedcity">
+                    <!--<button type="button" class="btn btn-secondary">
+                        (CITY NAME)</button>-->
+                </div>
+                <!--DISPLAY FIVE DAY FORECAST-->
+                <div class="col fiveday">
+                    <h3>5-Day Weather Forecast</h3>
+                    <!-- FIVE BOOTSTRAP CARDS
+                    https://getbootstrap.com/docs/5.3/components/card/ -->
+                </div>
+            </div>
+        </div>
+    </main>
+    <!--JS FILE-->
     <script src="/assets/js/script.js"></script>
 </body>
+
 </html>
