added API Key for five day weather forecaste server-sid api. JS: commented out acceptance requirements for the code

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 <div class="col">
                     <div id="search" class="input-group-sm mb-3">
                         <span id="inputGroup-sizing-sm" class="input-group-text">Search for a city:</span>
-                        <textarea class="form-control" type="text" aria-label="With textarea"
-                            aria-describedby="inputGroup-sizing-sm" placeholder="Boston..."></textarea>
+                        <textarea type="text" class="form-control" aria-label="With textarea"
+                            aria-describedby="inputGroup-sizing-sm" placeholder="Rome..."></textarea>
                     </div>
                     <button id="searchbtn" type="button" class="btn btn-primary btn-sm search">Search</button>
                 </div>
@@ -48,8 +48,8 @@
             <!--SECOND ROW-->
             <div class="row">
                 <!--LIST OF SEARCHED CITY(S)-->
-                <div id="storagecity" class="col storagecity">
-                    <!--<button id="storagecitybtn" type="button" class="btn btn-secondary">
+                <div id="citiesfromstorage" class="col citiesfromstorage">
+                    <!--<button id="searchhistory" type="button" class="btn btn-secondary searchhistory">
                         (CITY NAME)</button>-->
                 </div>
                 <!--DISPLAY FIVE DAY FORECAST-->
