added a few more comments to the HTML

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--HEADER-->
     <header>
         <div class="container-fluid"></div>
-        <div class="row text-center">
+        <div class="row text-right">
             <h1>Weather Dashboard</h1>
         </div>
         </div>
@@ -37,7 +37,7 @@
                 </div>
                 <!--DISPLAY CITY AND TODAY'S DATE-->
                 <div id="cityweather" class="col cityweather">
-                    <h2>city/date place holder</h2>
+                    <h2>city/date placeholder</h2>
                     <!--Bootstrap List Group
                     <li class="list-group-item temp">TEMPERATURE</li>
                     <li class="list-group-item wind">WIND</li>
@@ -54,7 +54,7 @@
                 </div>
                 <!--DISPLAY FIVE DAY FORECAST-->
                 <div class="col fiveday">
-                    <h3>5-Day Weather Forecast</h3>
+                    <h3>5-Day Weather Forecast placeholder</h3>
                     <!-- FIVE BOOTSTRAP CARDS id="fivedayforcast"
                     https://getbootstrap.com/docs/5.3/components/card/ -->
                 </div>
