JS: added code to displayCity funciton

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main>
         <div class="container-fluid text-center">
             <!--FIRST ROW-->
-            <div class="row">
+            <div class="first row">
                 <!--SEARCH CITY-->
                 <div class="col">
                     <div id="search" class="input-group-sm mb-3">
@@ -37,7 +37,7 @@
                 </div>
                 <!--DISPLAY CITY AND TODAY'S DATE-->
                 <div id="cityweather" class="col cityweather">
-                    <h2>city/date placeholder</h2>
+                    <!--<h2>-->
                     <!--Bootstrap List Group
                     <li class="list-group-item temp">TEMPERATURE</li>
                     <li class="list-group-item wind">WIND</li>
@@ -46,7 +46,7 @@
                 </div>
             </div>
             <!--SECOND ROW-->
-            <div class="row">
+            <div class="second row">
                 <!--LIST OF SEARCHED CITY(S)-->
                 <div id="citiesfromstorage" class="col citiesfromstorage">
                     <!--<button id="searchhistory" type="button" class="btn btn-secondary searchhistory">
@@ -66,6 +66,8 @@
     <!--jQuery CDN-->
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"
         integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+    <!--day.js-->
+<script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
 </body>
 
 </html>
