JS: wrote geoLocation function to get lat/lon. wrote fetchForecast funciton to get the weather data. with tutor. next: write function to json() the weather and display as a list

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 <div class="col">
                     <div id="search" class="input-group-sm mb-3">
                         <span id="inputGroup-sizing-sm" class="input-group-text">Search for a city:</span>
-                        <textarea type="text" class="form-control" aria-label="With textarea"
-                            aria-describedby="inputGroup-sizing-sm" placeholder="Rome..."></textarea>
+                        <input type="text" class="form-control" aria-label="With textarea"
+                            aria-describedby="inputGroup-sizing-sm" placeholder="Rome..." />
                     </div>
                     <button id="searchbtn" type="button" class="btn btn-primary btn-sm search">Search</button>
                 </div>
@@ -61,13 +61,13 @@
             </div>
         </div>
     </main>
-    <!--JS FILE-->
-    <script src="/assets/js/script.js"></script>
     <!--jQuery CDN-->
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"
         integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <!--day.js-->
-<script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
+    <!--JS FILE-->
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
