JS: stuck trying to figure out how to get the temp, wind and humidity from the api

--- a/index.html
+++ b/index.html
@@ -38,11 +38,13 @@
                 <!--DISPLAY CITY AND TODAY'S DATE-->
                 <div id="cityweather" class="col cityweather">
                     <!--<h2>-->
-                    <!--Bootstrap List Group
+                    <div id="weatherstats" class="weatherstats">
+                        <!--Bootstrap List Group
                     <li class="list-group-item temp">TEMPERATURE</li>
                     <li class="list-group-item wind">WIND</li>
                     <li class="list-group-item humidity">HUMIDITY</li>
                     -->
+                    </div>
                 </div>
             </div>
             <!--SECOND ROW-->
