JS: tinkered around with OneCall api to only fetch the cirrent weather. I almost have it, but the browser is slowing down and I'm getting an alert saying I've spelling the sity wrong(that i made) even though I spelled it right.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <!--DISPLAY CITY AND TODAY'S DATE-->
                 <div id="cityweather" class="col cityweather">
                     <!--<h2>-->
-                    <div id="weatherstats" class="weatherstats">
+                    <div id="currentstats" class="currentstats">
                         <!--Bootstrap List Group
                     <li class="list-group-item temp">TEMPERATURE</li>
                     <li class="list-group-item wind">WIND</li>
@@ -56,7 +56,7 @@
                 </div>
                 <!--DISPLAY FIVE DAY FORECAST-->
                 <div class="col fiveday">
-                    <h3>5-Day Weather Forecast placeholder</h3>
+                    <!--<h3>5-Day Weather Forecast placeholder</h3> -->
                     <!-- FIVE BOOTSTRAP CARDS id="fivedayforcast"
                     https://getbootstrap.com/docs/5.3/components/card/ -->
                 </div>
