icon not displaying as an image. HTML: restrucured the city weather div to hold both the date, city name, and the weather

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <!--FIRST ROW-->
             <div class="first row">
                 <!--SEARCH CITY-->
-                <div class="col">
+                <div class="col-4">
                     <div id="search" class="input-group-sm mb-3">
                         <span id="inputGroup-sizing-sm" class="input-group-text">Search for a city:</span>
                         <input type="text" class="form-control" aria-label="With textarea"
@@ -36,16 +36,18 @@
                     <button id="searchbtn" type="button" class="btn btn-primary btn-sm search">Search</button>
                 </div>
                 <!--DISPLAY CITY AND TODAY'S DATE-->
-                <div id="cityweather" class="col cityweather">
-                    <!--<h2>-->
+                <div class="col-8" >
+                    <div id="dateandcity" class="dateandcity">
+                    </div>
+                    <div id="currentstats" class="col currentstats">
+                        <!--Bootstrap List Group
+                    <li class="list-group-item temp">TEMPERATURE</li>
+                    <li class="list-group-item wind">WIND</li>
+                    <li class="list-group-item humidity">HUMIDITY</li>
+                    -->
+                    </div>
                 </div>
-                <div id="currentstats" class="currentstats">
-                    <!--Bootstrap List Group
-                <li class="list-group-item temp">TEMPERATURE</li>
-                <li class="list-group-item wind">WIND</li>
-                <li class="list-group-item humidity">HUMIDITY</li>
-                -->
-                </div>
+
             </div>
             <!--SECOND ROW-->
             <div class="second row">
