--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         (CITY NAME)</button>-->
                 </div>
                 <!--DISPLAY FIVE DAY FORECAST-->
-                <div class="col fiveday">
+                <div id="fiveday" class="col fiveday">
                     <!--<h3>5-Day Weather Forecast placeholder</h3> -->
                     <!-- FIVE BOOTSTRAP CARDS id="fivedayforcast"
                     https://getbootstrap.com/docs/5.3/components/card/ -->
