fixed loop. converted to imperial measure

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
             <!--SECOND ROW-->
             <div class="second row">
                 <!--LIST OF SEARCHED CITY(S)-->
-                <div id="citiesfromstorage" class="col citiesfromstorage">
+                <div id="citiesfromstorage" class="col-4 citiesfromstorage">
                     <!--<button id="searchhistory" type="button" class="btn btn-secondary searchhistory">
                         (CITY NAME)</button>-->
                 </div>
                 <!--DISPLAY FIVE DAY FORECAST-->
-                <div id="fiveday" class="col fiveday">
+                <div id="fiveday" class="col-8 fivedaysection">
                     <!--<h3>5-Day Weather Forecast placeholder</h3> -->
                     <!-- FIVE BOOTSTRAP CARDS id="fivedayforcast"
                     https://getbootstrap.com/docs/5.3/components/card/ -->
