coded set and get localstorage

--- a/index.html
+++ b/index.html
@@ -57,10 +57,12 @@
                         (CITY NAME)</button>-->
                 </div>
                 <!--DISPLAY FIVE DAY FORECAST-->
-                <div id="fiveday" class="col-8 fivedaysection">
-                    <!--<h3>5-Day Weather Forecast placeholder</h3> -->
+                <div id="cardssection" class="col-8 cardssection">
+                    <!--<<div id="fiveday" class="row fiveday">
+                    h3>5-Day Weather Forecast placeholder</h3> -->
                     <!-- FIVE BOOTSTRAP CARDS id="fivedayforcast"
-                    https://getbootstrap.com/docs/5.3/components/card/ -->
+                    https://getbootstrap.com/docs/5.3/components/card/
+                    </div> -->
                 </div>
             </div>
         </div>
