started writing CSS

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <!--FIRST ROW-->
             <div class="first row">
                 <!--SEARCH CITY-->
-                <div class="col-4">
+                <div class="col-4 leftside">
                     <div id="search" class="input-group-sm mb-3">
                         <span id="inputGroup-sizing-sm" class="input-group-text">Search for a city:</span>
                         <input type="text" class="form-control" aria-label="With textarea"
@@ -52,7 +52,7 @@
             <!--SECOND ROW-->
             <div class="second row">
                 <!--LIST OF SEARCHED CITY(S)-->
-                <div id="citiesfromstorage" class="col-4 citiesfromstorage">
+                <div id="citiesfromstorage" class="col-4 citiesfromstorage leftside">
                     <!--<button id="searchhistory" type="button" class="btn btn-secondary searchhistory">
                         (CITY NAME)</button>-->
                 </div>
