--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <span id="inputGroup-sizing-sm" class="input-group-text">Search for a city below:</span>
                         <input type="text" id="search" class="form-control" aria-label="With textarea"
                             aria-describedby="inputGroup-sizing-sm" placeholder="Rome..." />
-                        <button id="searchbtn" type="button" class="btn btn-primary btn-sm search">Search</button>
+                        <button id="searchbtn" type="button" class="btn btn-sm search">Search</button>
                     </div>
                 </div>
                 <!--DISPLAY CITY AND TODAY'S DATE-->
