--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </div>
                 </div>
                 <!--DISPLAY CITY AND TODAY'S DATE-->
-                <div id="currentweather" class="col-8">
+                <div id="currentweather" class="col-8 border">
                     <div id="dateandcity" class="dateandcity">
                     </div>
                     <div id="currentstats" class="col currentstats">
