--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <!--FIRST ROW-->
             <div class="first row">
                 <!--SEARCH CITY-->
-                <div class="col-4 leftside">
+                <div class="col-sm-4 leftside">
                     <div id="searcharea" class="input-group-sm mb-3">
                         <span id="inputGroup-sizing-sm" class="input-group-text">Search for a city below:</span>
                         <input type="text" id="search" class="form-control" aria-label="With textarea"
@@ -52,17 +52,15 @@
             <!--SECOND ROW-->
             <div class="second row">
                 <!--LIST OF SEARCHED CITY(S)-->
-                <div id="citiesfromstorage" class="col-4 citiesfromstorage leftside">
+                <div id="citiesfromstorage" class="col-sm-4 citiesfromstorage leftside">
                     <!--<button id="searchhistory" type="button" class="btn btn-secondary searchhistory">
                         (CITY NAME)</button>-->
                 </div>
                 <!--DISPLAY FIVE DAY FORECAST-->
-                <div id="cardssection" class="col-8 cardssection">
-                    <!--<<div id="fiveday" class="row fiveday">
-                    h3>5-Day Weather Forecast placeholder</h3> -->
-                    <!-- FIVE BOOTSTRAP CARDS id="fivedayforcast"
-                    https://getbootstrap.com/docs/5.3/components/card/
-                    </div> -->
+                <div id="cardssection" class="col-sm-8 cardssection">
+                    <div id="fiveday" class="row fiveday">
+
+                    </div> 
                 </div>
             </div>
         </div>
