able to set the local storage and render the search history on the left side

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
                             aria-describedby="inputGroup-sizing-sm" placeholder="Rome..." />
                         <button id="searchbtn" type="button" class="search">Search</button>
                     </div>
+                    <div class="row">
+                        <!--LIST OF SEARCHED CITY(S)-->
+                        <div id="citiesfromstorage" class="col-sm-4 citiesfromstorage leftside">
+                        </div>
+                    </div>
                 </div>
                 <!--DISPLAY CITY AND TODAY'S DATE-->
                 <div id="currentweather" class="col-8 border">
@@ -51,16 +56,11 @@
             </div>
             <!--SECOND ROW-->
             <div class="second row">
-                <!--LIST OF SEARCHED CITY(S)-->
-                <div id="citiesfromstorage" class="col-sm-4 citiesfromstorage leftside">
-                    <!--<button id="searchhistory" type="button" class="btn btn-secondary searchhistory">
-                        (CITY NAME)</button>-->
-                </div>
                 <!--DISPLAY FIVE DAY FORECAST-->
                 <div id="cardssection" class="col-sm-8 cardssection">
                     <div id="fiveday" class="row fiveday">
 
-                    </div> 
+                    </div>
                 </div>
             </div>
         </div>
