--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <!--SECOND ROW-->
             <div class="second row">
                 <!--DISPLAY FIVE DAY FORECAST-->
-                <div id="cardssection" class="col-sm-8 cardssection">
+                <div id="cardssection" class="col cardssection">
                     
                 </div>
             </div>
