changed input placeholder text
changed input placeholder text

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div id="searcharea" class="input-group-sm mb-3">
                         <span id="inputGroup-sizing-sm" class="input-group-text">Search for a city below:</span>
                         <input type="text" id="search" class="form-control" aria-label="With textarea"
-                            aria-describedby="inputGroup-sizing-sm" placeholder="Rome..." />
+                            aria-describedby="inputGroup-sizing-sm" placeholder="Reno, Chicago, Fargo..." />
                         <button id="searchbtn" type="button" class=" search">Search</button>
                     </div>
                     <div class="row">
