added spacing between the buttons

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
             <!--FIRST ROW-->
             <div class="first row">
                 <!--SEARCH CITY ON LEFT SIDE-->
-                <div class="col-sm-4 p-3 mb-2 bg-warning-subtle text-emphasis-warning border border-warning ">
+                <div class="col-4 p-2 mb-2 bg-warning-subtle text-emphasis-warning border border-warning">
                     <div id="searcharea" class="input-group-sm mb-3">
                         <span id="inputGroup-sizing-sm" class="input-group-text">Search for a city below:</span>
                         <input type="text" id="search" class="form-control" aria-label="With textarea"
                             aria-describedby="inputGroup-sizing-sm" placeholder="Reno, Chicago, Fargo..." />
                     </div>
-                    <div>
+                    <div class="p-2">
                         <button id="searchbtn" type="button"
                             class="btn btn-info btn-outline-light search">Search</button>
                     </div>
