added more styling ot the dashboard. added preview image for README

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <!--HEADER-->
     <header class="text-bg-primary p-3">
         <div class="container-fluid"></div>
-        <div class="row text-right">
-            <h1>Weather Dashboard</h1>
+        <div class="row align-item-right">
+            <h1 class="fs-1">Weather Dashboard</h1>
         </div>
         </div>
     </header>
